# tactician

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: gh_pages_deploy.yml
pkg/: package.json  tactician_bevy.d.ts  tactician_bevy.js  tactician_bevy_bg.wasm.d.ts
sprite_sheet_generator/: create_explosion_spritesheet.py
src/: bundles.rs  components.rs  lib.rs  main.rs  menu.rs  misc.rs  resources.rs
tactician-bevy/: Cargo.toml  index.html
tactician-bevy/src/: bundles.rs  components.rs  events.rs  lib.rs  main.rs  menu.rs  physics.rs  resources.rs
tactician-core/: Cargo.toml
tactician-core/src/: lib.rs  objects.rs
tactician-native/: Cargo.toml
tactician-native/src/: conversion_ext.rs  main.rs
